--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ project(PID)
 
 cmake_minimum_required (VERSION 3.5)
 
+set(CMAKE_BUILD_TYPE Debug)
+
 add_definitions(-std=c++11)
 
 set(CXX_FLAGS "-Wall")
@@ -12,13 +14,13 @@ set(sources src/PID.cpp src/main.cpp)
 include_directories(/usr/local/include)
 link_directories(/usr/local/lib)
 
-if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
+if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
 include_directories(/usr/local/opt/openssl/include)
 link_directories(/usr/local/opt/openssl/lib)
 link_directories(/usr/local/Cellar/libuv/1*/lib)
 
-endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
+endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
 
 add_executable(pid ${sources})
